# stats489-research

./: .gitignore  README.md
1-sensitivity-analysis/: App_utils.R  DIF_sens.R  DIF_simu.R  README.md  Run_sen.R  example.R  example_full.R  submit_sen.sbatch
2-pisa-dif-analysis/: README.md  analysis.R
3-dina/: README.md  constraints.py  dina_gibbs_estimator.py  dina_lasso_estimator.py  dina_utils.py  dina_vb_estimator.py  final_results.csv  generate_datasets.py  q_init_sat.py  run_all_methods.py  run_ip_only.py  run_ip_simulation.py  run_simulation.py
3-dina/qem-dina/: README.md  pyproject.toml
3-dina/qem-dina/simulations/: metrics.py  q_candidates.py  try.ipynb
3-dina/qem-dina/src/dina/: SAT_constraints.py  config.py  constraints.py  em.py  estep.py  q_mip.py  updates.py  utils.py
